--- a/calBitOps.ipynb
+++ b/calBitOps.ipynb
@@ -34,7 +34,7 @@
     "    cord_bit = 32\n",
     "    BiInterOps = 0\n",
     "    BiInterOps += 2 * cord_bit * cord_bit\n",
-    "    BiInterOps += L * F * ((2 + 4) * cord_bit * cord_bit + 4 * cord_bit * hash_bit)\n",
+    "    BiInterOps += L * F * ((4 + 4) * cord_bit * cord_bit + 4 * cord_bit * hash_bit)\n",
     "    per_point_bitOps += BiInterOps * 3  # 三个2D网格\n",
     "    print('BiInterOps per point:',BiInterOps)\n",
     "    # (2)------SigmaNet------\n",
@@ -49,7 +49,7 @@
     "    print('sigma_net_BitOps per point:',sigma_net_BitOps)\n",
     "    # (3)------ColorNet------\n",
     "    # ColorNet：\n",
-    "    color_net_bit = 13\n",
+    "    color_net_bit = 16\n",
     "    color_net_BitOps = 0\n",
     "    # layer 0\n",
     "    color_net_BitOps += (31 * 128) * (color_net_bit ** 2)\n",
@@ -63,7 +63,7 @@
     "    volRenderOps = 0\n",
     "    num_samples_per_ray = num_samples_each_image / ray_num\n",
     "    print('samples per ray:',num_samples_per_ray)\n",
-    "    volRenderOps += sigma_net_bit * num_samples_per_ray * (num_samples_per_ray - 1) / 2\n",
+    "    volRenderOps += sigma_net_bit * sigma_net_bit * num_samples_per_ray * (num_samples_per_ray - 1) / 2\n",
     "    volRenderOps += num_samples_per_ray * sigma_net_bit * color_net_bit\n",
     "    print('volRenderOps per ray:',volRenderOps)\n",
     "    # ------Sum------\n",
